# open-flow

./: README.md
app/: .gitignore  App.tsx  CLAUDE.md  README.md  app.json  jest.config.js  package-lock.json  package.json  tsconfig.json
app/src/: agentTools.ts  commandParser.ts  companion.ts  companionPrompt.ts  mobileUseAgent.ts  plan.ts  realtime.ts  scriptedFlows.ts  taskRouter.ts  tts.ts  useVoiceAssistant.ts  useWakeWord.ts  visionAgent.ts
app/src/components/: AgentPanel.tsx  Island.tsx
desktop_agent/: .gitignore  README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
desktop_agent/scripts/: setup-demo.sh  voice_recognize.swift
desktop_agent/src/: App.tsx  index.css
desktop_agent/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop_agent/src-tauri/capabilities/: default.json
desktop_agent/src-tauri/src/: db.rs  lib.rs  planner.rs
desktop_agent/src-tauri/src/commands/: apps.rs  automation.rs  filesystem.rs  mod.rs  screen.rs  voice.rs  window.rs
desktop_agent/src/components/chat/: ChatInput.tsx
desktop_agent/src/components/execution/: ExecutionPanel.tsx  ResultLog.tsx
desktop_agent/src/components/plan/: ConfirmDialog.tsx  PlanPreview.tsx
desktop_agent/src/lib/: tauri-api.ts  types.ts  voice.ts
desktop_agent/src/pages/: Chat.tsx  History.tsx  Home.tsx  Pet.tsx
