[package]
name = "nova"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
dotenvy = "0.15"
tauri-plugin-global-shortcut = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "nova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
